@@ -1,4 +1,6 @@
+AUX 77-ja-ricohfonts.conf 643 SHA256 a6f31eb5ad02a8c597d589b945135e79632d5d797b3137ea779ca6773c99483d SHA512 0c9f5dd57c9632ec7e3b3ebf0da090dccc17c01a0dc369a99755b9662769017f03f33b6ac18625bb2527594188c5ff61b6f0d0eafb89891cca2f4c7b7f5021eb WHIRLPOOL 5bfec613b1b6b803523759bbcc2e33004984a6a5896c469e7bc8b70542abf8ebc9f661ac509c6b1f1ea7f97f13721414e224e3d78fb19bd60a97ee4bcc146cbb
 DIST starsuite9-ja-ricohfonts-9.0.0-9358.i586.rpm 30896033 SHA256 ee6ed1bd03682f0c111478fc9adceb9cca2c5d88be332dc7900dccfa3cacaf64 SHA512 530bb30a7ac49b0e6a7eaa2af928779f4ab08bdcdd33a5b4e56026ffdf60bf6eff3901674c2a3ac848b7ffaad6f119b1162c02cb06b47d44fd42a91975e00cc8 WHIRLPOOL 1f7a88abecdf4c38f00ee1a7d496493f0ec0d5eb5940124dc6f135d9430a96e9097f4488661bde172fab7a66a8b19f8255ab9edd6b3130fc1c498ee992f2a4b8
-EBUILD ja-ricohfonts-1.0.ebuild 802 SHA256 eb32867afae99e2602e1f8808987ff59f77828298aaeb0662e88acbc74511db5 SHA512 bfc30f9216d6c50cfff4aa0345e19f75d2f7688ea23c2fd6871990f05d76e1750f195baa71bd77964b56e5e9c80dd06a2aa74c20f6212cd05a098d39eebd176a WHIRLPOOL 22d57ebd88c774b0494c5e7e0e7d7cf87b88c93e60999024560cf01a07c9f7a9f3fdf9795eeebfe5dd10243e2a17947612362e452f09258aed05f4a3ce5ec23a
-MISC ChangeLog 292 SHA256 851d3531d76974e7324c4fdc0f4830e31cf68da0ec2a9d866df2f5acdbb392bf SHA512 d29374665c5cc53dfcab26d3ca2c694f9720ae3c70eaee87a89779c7351720f8a0386690234eb02ab1f53bec6fee1c7572079c96b0946ed53c21e0fc208677cc WHIRLPOOL b7ecde9ae36948c618acbe6f03bc96b04c61aa2d371d72d7d96b51ead781000099308a06ce6d8f64a3c6462fff53ea018fb63a2ce572da8312c7ed8cb579c72b
+EBUILD ja-ricohfonts-1.0.ebuild 844 SHA256 e97710f99fa47da237fc67e152c51662525aa0f6e84574268cc6d3201551395f SHA512 878db22cc0fe4d481a9b12dd7f0d671203e4fa20cf8d3e9caad1e6ac9f30574a6d2c5ffc1e58e82c737d22d9bd38039ba77be071dab9471849e6ca93d5b85eb0 WHIRLPOOL 7bfabd73913d47fe1228c8e17b099d3d4eca91e19d31d16cab9dddddbf5385cea2ff1693f7e6ed2ab33424f2e3816925987e8b9788ec567d9bba9912fe72b406
+EBUILD ja-ricohfonts-1.1.ebuild 844 SHA256 e97710f99fa47da237fc67e152c51662525aa0f6e84574268cc6d3201551395f SHA512 878db22cc0fe4d481a9b12dd7f0d671203e4fa20cf8d3e9caad1e6ac9f30574a6d2c5ffc1e58e82c737d22d9bd38039ba77be071dab9471849e6ca93d5b85eb0 WHIRLPOOL 7bfabd73913d47fe1228c8e17b099d3d4eca91e19d31d16cab9dddddbf5385cea2ff1693f7e6ed2ab33424f2e3816925987e8b9788ec567d9bba9912fe72b406
+MISC ChangeLog 435 SHA256 f1c0a9fbe5c771709e7dddeaf00cd2681d04442c2b94a90888b0ad53603df0b0 SHA512 7cd8002a550cf334c7726d2c15d4490bc44987c765879f9036dc2515894fa4f005cbc8fd4417d230f119d7437c1cc6c843bf8b1062b417f1e424dcaa59f45ecd WHIRLPOOL 37cd8ddfc5a9a4e9548c4c79888e7e9f63d8c35c1b32c3f2609a5d3e3a048321d51dd6b3b6434af1f6e68fb843ab3552cd9219ed667d0716a8a481bea0635117
 MISC metadata.xml 701 SHA256 7ca6e83308a1f89d756b1ed5966979b808d39d5abe3c9fb344c263e92a30b2ee SHA512 0ef4df020002657dd8ec63be22691fc948bcc5ee1bc330bddb50f1a9cf32ec5a5b9e6d958b847eea872901b430004164ea0e905f7bb717fcff56342f8ec9cada WHIRLPOOL e24e3276c83910d9875bb2de2776be9268962c5fc32d1540ba003f6c494b53e77a17cee28a78d9d4b49d084c5b7ec5cb7970e844be45526315b785e733cb25fe
