@@ -1,0 +1,28 @@
+<fontconfig>
+
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>sans-serif</string>
+		</test>
+		<edit name="family" mode="prepend" binding="strong">
+			<string>MSPGothic</string>
+		</edit>
+	</match> 
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>serif</string>
+		</test>
+		<edit name="family" mode="prepend" binding="strong">
+			<string>MSPMincho</string>
+		</edit>
+	</match> 
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>monospace</string>
+		</test>
+		<edit name="family" mode="prepend" binding="strong">
+			<string>MSGothic</string>
+		</edit>
+	</match> 
+</fontconfig>
+
