@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ja-ricohfonts-1.1 (18 Dec 2014)
+  18 Dec 2014; Yamagata Fumihiro <bunbun042000@gmail.com> +ja-ricohfonts-1.1.ebuild :
+  add fontconfig file.
+
 *ja-ricohfonts-1.0 (16 Jun 2014)
 
   16 Jun 2014; Yamagata Fumihiro <bunbun042000@gmail.com> +ChangeLog, +metadata.xml, +ja-ricohfonts-1.0.ebuild :
